--- a/package.json
+++ b/package.json
@@ -29,9 +29,13 @@
     "grunt-contrib-concat": "~0.4.0",
     "grunt-contrib-connect": "~0.7.1",
     "karma": "~0.12.16",
-    "grunt-karma": "~0.8.3",
     "grunt-jsdoc": "~0.5.4",
     "matchdep": "~0.3.0",
-    "grunt-html2js": "~0.2.7"
+    "grunt-html2js": "~0.2.7",
+    "grunt-indent": "~0.1.4",
+    "grunt-contrib-copy": "~0.5.0",
+    "grunt-contrib-uglify": "~0.4.0",
+    "karma-jasmine": "~0.1.5",
+    "karma-chrome-launcher": "~0.1.4"
   }
 }
