--- a/.jshintrc
+++ b/.jshintrc
@@ -36,7 +36,7 @@
     "noarg"         : true,     // Prohibit use of `arguments.caller` and `arguments.callee`.
     "noempty"       : true,     // Prohibit use of empty blocks.
     "nonew"         : true,     // Prohibit use of constructors for side-effects.
-    "plusplus"      : true,     // Prohibit use of `++` & `--`.
+    "plusplus"      : false,    // Prohibit use of `++` & `--`.
     "regexp"        : true,     // Prohibit `.` and `[^...]` in regular expressions.
     "undef"         : true,     // Require all non-global variables be declared before they are used.
     "strict"        : true,     // Require `use strict` pragma in every file.
@@ -114,7 +114,11 @@
         "window",
         "angular",
         "require",
-        "module"
+        "module",
+        "describe",
+        "beforeEach",
+        "it",
+        "expect"
     ],
     "indent"        : 4         // Specify indentation spacing
 }
